--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
-
+.idea/
 # Firebase cache
 .firebase/
 
@@ -64,3 +64,4 @@ node_modules/
 
 # dotenv environment variables file
 .env
+/.idea/
