--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "firebase": "^7.14.2",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "lodash": "latest",
+    "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
